# vehicle_interface

./: .gitignore  169.254.105-metadata.json  Dockerfile  README.md  docker-compose.yml  launch.hailbopp_full.py  launch.hailbopp_sensor_collection.py  launch.radar_test.py  launch_node_definitions.py
data/: hail_bopp.urdf  real_world.rviz
data/lidar/: lidar_pointcloud_right.param.yaml  ouster_params.yaml
docker/: entrypoint.sh
src/: launch.hailbopp_full.py  launch.hailbopp_sensor_collection.py  launch_node_definitions.py
src/actuation/epas/epas/: epas_node.py
src/actuation/linear_actuator/linear_actuator/: linear_actuator_node.py
src/actuation/mcu_interface/mcu_interface/: mcu_interface_node.py
src/drivers/radar/: DelphiESR.Dockerfile  DelphiESRBridge.Dockerfile  docker-compose.yml
src/drivers/radar/docker/: entrypoint.sh  entrypoint_bridge.sh
src/sensing/gnss/gnss/: gnss_interface_node.py
src/sensing/lidar/: package.xml  setup.cfg  setup.py
src/sensing/lidar/lidar/: dual_lidar_processing_node.py  lidar_ouster_processing_node.py
src/sensing/radar/: package.xml  setup.cfg  setup.py
src/sensing/radar/radar/: delphi_esr_radar_processing_node.py
