<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>radar</name>
  <version>1.0.0</version>
  <description>Nodes for processing radar data.</description>
  <maintainer email="project.nova@utdallas.edu">Nova</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <depend>nav_msgs</depend>
  <depend>delphi_esr_msgs</depend>
</package>
